--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+@import '~antd/dist/antd.css';
 .App {
   text-align: center;
 }
@@ -28,12 +29,6 @@
   color: #61dafb;
 }
 
-.Button {
-  color: #000000;
-  height: 5vh;
-  width: 10vh;
-}
-
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -41,4 +36,77 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+/**
+ * Site header
+ */
+ .site-header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 5%;
+  padding-right: 5%;
+  /* border-bottom: 1px solid black; */
+  font-size: 26px;
+  min-height: 2em;
+  position: relative;
+}
+
+.site-title {
+  font-weight: 700;
+  letter-spacing: -1px;
+  margin-bottom: 0;
+  float: left;
+  color: black;
+  text-decoration: none;
+}
+.site-title:hover {
+  color: black;
+}
+
+.main-contents {
+  /* display: flex; */
+  align-items: center;
+  justify-content: center;
+  min-height: 90vh;
+
+}
+.intro {
+  padding-top: 20vh;
+  padding-bottom: 10vh;
+  width: 100%;
+  text-align: center;
+  color: black;
+}
+
+
+
+.offset {
+  border: 1px solid rgb(68, 150, 122);
+  transition: all 0.1s ease-in-out;
+  padding: 0.5em 1em;
+  color: black;
+  background-color: white;
+  font-size: 16px;
+}
+.offset:hover {
+  background-color: hsl(160, 38%, 93%);
+  box-shadow: .2em .1em 0 0 rgb(68, 150, 122);
+}
+.offset:focus {
+  outline:0;
+}
+.wrap {
+  width: 100%;
+  text-align: center;
+}
+
+.intro h1 {
+  font-size: 3rem;
+  font-weight: 700;
+}
+
+.intro h2 {
+  font-weight: 300
 }
