--- a/src/App.css
+++ b/src/App.css
@@ -110,6 +110,19 @@
   width: 100%;
 }
 
+.custom-upload {
+  overflow: hidden;
+  display: inline-block;
+  justify-content: center;
+}
+
+input[type='file'] {
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 0;
+}
+
 .wrap {
   width: 100%;
   text-align: center;
