--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,7 @@
   margin-bottom: 0;
   text-decoration: none;
   width: min-content;
+  outline: none;
 }
 
 .site-title:hover {
@@ -79,12 +80,47 @@
   min-height: 90vh;
 }
 
-.intro {
-  padding-top: 20vh;
+.intro, .page{
+  padding-top: 5vh;
   padding-bottom: 10vh;
   width: 100%;
   text-align: center;
   color: black;
+}
+
+.page{
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
+.main {
+  display: flex;
+  min-height: 90vh;
+  align-items: center;
+  justify-content: center;
+  padding: 0 10%;
+}
+
+.intro h1 {
+  font-size: 9vmin;
+  font-weight: 700;
+}
+
+.intro h2, .page h2 {
+  font-weight: 300;
+}
+
+.page h2 {
+  font-size: 3vmin;
+}
+
+.page h1 {
+  font-size: 6vmin;
+  font-weight: 700;
+}
+
+button.offset {
+  width: 100%
 }
 
 .offset {
@@ -115,11 +151,10 @@
   text-align: center;
 }
 
-.intro h1 {
-  font-size: 9vmin;
-  font-weight: 700;
+.wrapper {
+  padding: 0 10%;
 }
 
-.intro h2 {
-  font-weight: 300;
+.ant-col {
+  width: 80%
 }
