--- a/src/App.css
+++ b/src/App.css
@@ -80,7 +80,8 @@
   min-height: 90vh;
 }
 
-.intro, .page{
+.intro,
+.page {
   padding-top: 5vh;
   padding-bottom: 10vh;
   width: 100%;
@@ -88,7 +89,7 @@
   color: black;
 }
 
-.page{
+.page {
   padding-left: 5%;
   padding-right: 5%;
 }
@@ -106,7 +107,8 @@
   font-weight: 700;
 }
 
-.intro h2, .page h2 {
+.intro h2,
+.page h2 {
   font-weight: 300;
 }
 
@@ -120,7 +122,7 @@
 }
 
 button.offset {
-  width: 100%
+  width: 100%;
 }
 
 .offset {
@@ -156,13 +158,13 @@ button.offset {
 }
 
 .ant-col {
-  width: 80%
+  width: 80%;
 }
 
 .tooltip {
   float: right;
   justify-self: flex-end;
-  position: absolute; 
+  position: absolute;
   right: 5%;
   font-weight: 300;
   font-size: 2.7vmin;
@@ -170,4 +172,18 @@ button.offset {
 
 a.tooltip {
   color: black;
+}
+
+.ascii-phylo {
+  font-family: monospace;
+  white-space: pre-line;
+}
+
+.ascii-phylo-container {
+  background-color: #eeeeee;
+  width: 100vmin;
+  height: 100vmin;
+  overflow-x: auto;
+  overflow-y: auto;
+  margin-top: 5vmin;
 }
