Add info popover to pairwise

--- a/src/App.css
+++ b/src/App.css
@@ -199,11 +199,11 @@ a.tooltip {
   width: 100%;
 }
 
-.phylo-example-credits {
+.example-credits {
   padding-left: 2vmin;
 }
 
-.phylo-example-text {
+.example-text {
   margin-top: 2vmin;
 }
 
