--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,10 @@ a.tooltip {
   min-height: 90vh;
 }
 
+.home {
+  min-height: 82vh;
+}
+
 .intro,
 .page {
   padding-top: 5vh;
@@ -62,11 +66,20 @@ a.tooltip {
   color: black;
 }
 
-.page {
+.page, .explanation {
   padding-left: 5%;
   padding-right: 5%;
 }
 
+h3 {
+  font-weight: 400;
+}
+.highlight {
+  background-color: hsl(160, 38%, 83%);
+  padding-left: 0.3em;
+  padding-right: 0.3em;
+  border-radius: 4px;
+}
 .main {
   display: flex;
   min-height: 90vh;
