--- a/src/App.css
+++ b/src/App.css
@@ -117,6 +117,10 @@ h1 {
   font-size: 1.5em;
 }
 
+.x {
+  color: rgb(128, 128, 128)
+}
+
 .offset {
   background-color: white;
   border: 1.5px solid rgb(68, 150, 122);
@@ -133,7 +137,7 @@ h1 {
 
 .offset:hover {
   background-color: hsl(160, 38%, 93%);
-  box-shadow: 0.2em 0.1em 0 0 rgb(68, 150, 122);
+  box-shadow: 0.2em 0.1em 0 0 #44967a;
   color: black;
   text-decoration: none;
 }
